--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,17 @@
 @import url("reset.css");
 @import url("variables.css");
+
 /* components */
 @import url("components/status-bar.css");
+@import url("components/nav-bar.css");
+@import url("components/screen-header.css");
+
 /* screens */
 @import url("screens/login.css");
+@import url("screens/friends.css");
 
 body {
+  color: #2e363e;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
