--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,7 @@
 @import url("components/status-bar.css");
 @import url("components/nav-bar.css");
 @import url("components/screen-header.css");
+@import url("components/user-component.css");
 
 /* screens */
 @import url("screens/login.css");
@@ -14,4 +15,8 @@ body {
   color: #2e363e;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
+.main-screen {
+  padding: 0px var(--horizontal-space);
 }
