--- a/css/components/status-bar.css
+++ b/css/components/status-bar.css
@@ -5,7 +5,7 @@
   position: fixed;
   top: 0;
   width: 100%;
-  /* box-sizing: border-box; */
+  box-sizing: border-box;
 }
 
 .status-bar__column {
