--- a/css/styles.css
+++ b/css/styles.css
@@ -8,10 +8,14 @@
 @import url("components/user-component.css");
 @import url("components/badge.css");
 @import url("components/icon-row.css");
+@import url("components/alt-screen-header.css");
 /* screens */
 @import url("screens/login.css");
 @import url("screens/friends.css");
 @import url("screens/find.css");
+@import url("screens/more.css");
+@import url("screens/settings.css");
+@import url("screens/chat.css");
 
 body {
   color: #2e363e;
